<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/user_details"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="moro"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/contacts"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/contact_type"
        />

    <EditText
        android:textColor="@android:color/white"
        android:id="@+id/contact_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/contact_value"/>
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/add_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/add_contact"/>

</LinearLayout>